// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WalletWidget Connected address is properly displayed 1`] = `
<div>
  <button
    class="MuiButtonBase-root-34 MuiButton-root-5 MuiButton-contained-13 MuiButton-containedPrimary-14 MuiButton-disableElevation-16"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiButton-label-6 makeStyles-walletButtonLabel-4"
    >
      0x1..a1a
    </span>
    <span
      class="MuiTouchRipple-root-37"
    />
  </button>
</div>
`;

exports[`WalletWidget Displays walletSelect menu upon click 1`] = `
<span
  class="svelte-1799bj2"
>
  MetaMask
   
</span>
`;

exports[`WalletWidget Renders correctly 1`] = `
<div>
  <button
    class="MuiButtonBase-root-34 MuiButton-root-5 MuiButton-contained-13 MuiButton-containedPrimary-14 MuiButton-disableElevation-16"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiButton-label-6 makeStyles-walletButtonLabel-4"
    >
      Connect
    </span>
    <span
      class="MuiTouchRipple-root-37"
    />
  </button>
</div>
`;

exports[`WalletWidget Renders mobile version correctly 1`] = `
<div>
  <button
    class="MuiButtonBase-root-34 MuiButton-root-5 MuiButton-contained-13 MuiButton-containedPrimary-14 MuiButton-disableElevation-16"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiButton-label-6 makeStyles-walletButtonLabel-4"
    >
      Connect
    </span>
    <span
      class="MuiTouchRipple-root-37"
    />
  </button>
</div>
`;
